[package]
name = "ccdoc"
version = "0.1.0"
authors = ["condy <condy0919@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clang-sys = "0.28.1"
bitflags = "1.2.1"
log = "0.4.0"
env_logger = "0.7.1"
pulldown-cmark = { version = "0.6", default-features = false }
toml = "0.5.6"